# relatorio_mensal_arpol

./: .env.example  README.md  mkdocs.yml  pyproject.toml
app_dash/: main.py  relatorio.py
app_dash/api/: relatorio.py
app_dash/docs/architecture/: README.md
app_dash/src/: app.py
app_dash/src/components/: ButtonSiderbar.py  MetricCards.py  Navbar.py  Sidebar.py  SidebarButton.py
app_dash/src/services/: data_service.py
app_dash/src/styles/: main.css
app_dash/src/utils/: logger.py
app_dash/tests/: test_api.py
app_dash/tests/unit/: test_data_service.py
docs/: index.md
docs/stylesheets/: extra.css
