[tool.poetry]
name = "app-dash"
version = "0.1.0"
description = ""
authors = ["roarpol <romilson@arpolar.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocstrings = {extras = ["python"], version = "^0.29.0"}
mkdocstrings-python = "^1.16.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
blue = "^0.9.1"
isort = "^6.0.1"
taskipy = "^1.14.1"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
